--- a/styleColorGame.css
+++ b/styleColorGame.css
@@ -2,6 +2,7 @@ body{
 background-color: #232323;
 margin: 0;
 font-family: 'Montserrat', '_Avenir_';
+letter-spacing: 1px;
 }
 
 h1	{
@@ -15,11 +16,14 @@ h1	{
 	padding: 20px 0;
 }
 button	{
+	font-family: 'Montserrat', '_Avenir_';
 	border: none;
 	background: none;
 	text-transform: uppercase;
 	height: 100%;
 	font-weight: 700;
+	letter-spacing: 1px;
+	color: steelblue;
 
 }
 
@@ -51,4 +55,5 @@ font-size: 200%;
 .selected
 {
 	background-color: steelblue;
+	color: white;
 }
