--- a/styleColorGame.css
+++ b/styleColorGame.css
@@ -26,6 +26,8 @@ button	{
 	color: steelblue;
 	font-size: inherit;
 	transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
 
 }
 button:hover {
@@ -40,7 +42,9 @@ padding-bottom: 30%;
 float: left;
 margin: 1.66%;
 border-radius: 15%;
-
+transition: background 0.6s;
+-webkit-transition: background 0.6s;
+-moz-transition: background 0.6s;
 }
 
 #message{
@@ -48,7 +52,7 @@ border-radius: 15%;
 	width: 20%;
 }
 #container {
-	margin: 0 auto;
+	margin: 20px auto;
 	max-width: 600px;
 }
 #stripe
