--- a/styleColorGame.css
+++ b/styleColorGame.css
@@ -41,7 +41,7 @@ width: 30%;
 background: purple;
 padding-bottom: 30%;
 float: left;
-margin: 1.66%;
+margin: 1.66%;;
 border-radius: 15%;
 transition: background 0.6s;
 -webkit-transition: background 0.6s;
